euphony-sc-core/src/snapshots/euphony_sc__osc__node__fill_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_fill",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Int(
                    3,
                ),
                Float(
                    3.24,
                ),
            ],
        },
    ),
)
