euphony-sc-core/src/snapshots/euphony_sc__osc__node__free_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_free",
            args: [
                Int(
                    2,
                ),
            ],
        },
    ),
)
