euphony-sc-core/src/snapshots/euphony_sc__osc__node__map_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_map",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Int(
                    2,
                ),
            ],
        },
    ),
)
