euphony-sc-core/src/snapshots/euphony_sc__osc__node__set_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_set",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Float(
                    3.14,
                ),
                String(
                    "controla",
                ),
                Int(
                    123,
                ),
            ],
        },
    ),
)
