euphony-sc-core/src/snapshots/euphony_sc__osc__node__setn_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/n_setn",
            args: [
                Int(
                    2,
                ),
                Int(
                    1,
                ),
                Int(
                    2,
                ),
                Float(
                    3.14,
                ),
                Int(
                    123,
                ),
            ],
        },
    ),
)
